Fix contrast

--- a/style.css
+++ b/style.css
@@ -243,7 +243,7 @@ nav a:hover{
 .title{
     font-family: 'Indie Flower', cursive;
     font-size: 2em;
-    color: #0E6655;
+    color: white;
 }
 
 .zone {
